--- a/ArduIllusion/CHANGELOG
+++ b/ArduIllusion/CHANGELOG
@@ -4,6 +4,9 @@ ArduIllusion - control Flight Illusion's sim instruments with Arduino
      Copyright (c) 2013 Stefan Gofferje. All rights reserved.
 ------------------------------------------------------------------------------
 
+0.04 - 04MAY2014
+Minor bugfixes and code reviews
+
 0.03 - 17APR2014
 Digital altimeter (GSA-16) fully supported
 Added function for status query
